@@ -1,0 +1,17 @@
+[Desktop Entry]
+Encoding=UTF-8
+_Name=Theme Installer
+_Comment=Installs themes packages for various parts of the desktop
+Exec=gnome-appearance-properties -i %u
+Icon=gnome-settings-theme
+Terminal=false
+Type=Application
+MimeType=application/x-gnome-theme-package;
+StartupNotify=true
+Categories=GNOME;GTK;
+# we don't want to show this at all in the menus
+OnlyShowIn=;
+X-GNOME-Bugzilla-Bugzilla=GNOME
+X-GNOME-Bugzilla-Product=gnome-control-center
+X-GNOME-Bugzilla-Component=Appearance
+X-GNOME-Bugzilla-Version=@VERSION@
