@@ -1,6 +1,13 @@
 2007-06-16  Jens Granseuer  <jensgr@gmx.net>
 
 	* Makefile.am:
+	* appearance-main.c: (init_appearance_data), (main):
+	* gnome-theme-installer.desktop.in.in: make gnome-theme-installer
+	work
+
+2007-06-16  Jens Granseuer  <jensgr@gmx.net>
+
+	* Makefile.am:
 	* appearance-style.c: (prepare_list):
 	* appearance-themes.c: (theme_install_cb), (theme_delete_cb),
 	(theme_details_changed_cb):
